cover edge case

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -101,7 +101,34 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Usage:   \n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <requirement specifier> [package-index-options] ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] -r <requirements file> [package-index-options] ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <vcs project url> ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <local project path> ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <archive url/path> ...\n",
+      "\n",
+      "no such option: -u\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Usage:   \n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <requirement specifier> [package-index-options] ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] -r <requirements file> [package-index-options] ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <vcs project url> ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <local project path> ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <archive url/path> ...\n",
+      "\n",
+      "no such option: -u\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -upgrade pip -quiet\n",
     "%pip install pyergast -upgrade -quiet"
@@ -148,7 +175,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install jovian --upgrade -q"
    ]
@@ -236,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -260,75 +295,78 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Portuguese Grand Prix':    DriverNumber BroadcastName Abbreviation           TeamName TeamColor  \\\n",
-      "44           44    L HAMILTON          HAM           Mercedes    00D2BE   \n",
-      "77           77      V BOTTAS          BOT           Mercedes    00D2BE   \n",
-      "33           33  M VERSTAPPEN          VER    Red Bull Racing    1E41FF   \n",
-      "16           16     C LECLERC          LEC            Ferrari    DC0000   \n",
-      "10           10       P GASLY          GAS         AlphaTauri    ffffff   \n",
-      "55           55       C SAINZ          SAI            McLaren    FF8700   \n",
-      "11           11       S PEREZ          PER       Racing Point    F596C8   \n",
-      "31           31        E OCON          OCO            Renault    FFF500   \n",
-      "3             3   D RICCIARDO          RIC            Renault    FFF500   \n",
-      "5             5      S VETTEL          VET            Ferrari    DC0000   \n",
-      "7             7   K RAIKKONEN          RAI  Alfa Romeo Racing    9B0000   \n",
-      "23           23       A ALBON          ALB    Red Bull Racing    1E41FF   \n",
-      "4             4      L NORRIS          NOR            McLaren    FF8700   \n",
-      "63           63     G RUSSELL          RUS           Williams    0082fa   \n",
-      "99           99  A GIOVINAZZI          GIO  Alfa Romeo Racing    9B0000   \n",
-      "20           20   K MAGNUSSEN          MAG       Haas F1 Team    787878   \n",
-      "8             8    R GROSJEAN          GRO       Haas F1 Team    787878   \n",
-      "6             6      N LATIFI          LAT           Williams    0082fa   \n",
-      "26           26       D KVYAT          KVY         AlphaTauri    ffffff   \n",
-      "18           18      L STROLL          STR       Racing Point    F596C8   \n",
-      "\n",
-      "    FirstName    LastName            FullName  Position  GridPosition  Q1  Q2  \\\n",
-      "44      Lewis    Hamilton      Lewis Hamilton       1.0           1.0 NaT NaT   \n",
-      "77   Valtteri      Bottas     Valtteri Bottas       2.0           2.0 NaT NaT   \n",
-      "33        Max  Verstappen      Max Verstappen       3.0           3.0 NaT NaT   \n",
-      "16    Charles     Leclerc     Charles Leclerc       4.0           4.0 NaT NaT   \n",
-      "10     Pierre       Gasly        Pierre Gasly       5.0           9.0 NaT NaT   \n",
-      "55     Carlos       Sainz        Carlos Sainz       6.0           7.0 NaT NaT   \n",
-      "11     Sergio       Perez        Sergio Perez       7.0           5.0 NaT NaT   \n",
-      "31    Esteban        Ocon        Esteban Ocon       8.0          11.0 NaT NaT   \n",
-      "3      Daniel   Ricciardo    Daniel Ricciardo       9.0          10.0 NaT NaT   \n",
-      "5   Sebastian      Vettel    Sebastian Vettel      10.0          15.0 NaT NaT   \n",
-      "7        Kimi   Räikkönen      Kimi Räikkönen      11.0          16.0 NaT NaT   \n",
-      "23  Alexander       Albon     Alexander Albon      12.0           6.0 NaT NaT   \n",
-      "4       Lando      Norris        Lando Norris      13.0           8.0 NaT NaT   \n",
-      "63     George     Russell      George Russell      14.0          14.0 NaT NaT   \n",
-      "99    Antonio  Giovinazzi  Antonio Giovinazzi      15.0          17.0 NaT NaT   \n",
-      "20      Kevin   Magnussen     Kevin Magnussen      16.0          19.0 NaT NaT   \n",
-      "8      Romain    Grosjean     Romain Grosjean      17.0          18.0 NaT NaT   \n",
-      "6    Nicholas      Latifi     Nicholas Latifi      18.0          20.0 NaT NaT   \n",
-      "26     Daniil       Kvyat        Daniil Kvyat      19.0          13.0 NaT NaT   \n",
-      "18      Lance      Stroll        Lance Stroll      20.0          12.0 NaT NaT   \n",
-      "\n",
-      "    Q3                   Time            Status  Points  \n",
-      "44 NaT 0 days 01:29:56.828000          Finished    26.0  \n",
-      "77 NaT 0 days 01:30:22.420000          Finished    18.0  \n",
-      "33 NaT 0 days 01:30:31.336000          Finished    15.0  \n",
-      "16 NaT 0 days 01:31:02.140000          Finished    12.0  \n",
-      "10 NaT                    NaT            +1 Lap    10.0  \n",
-      "55 NaT                    NaT            +1 Lap     8.0  \n",
-      "11 NaT                    NaT            +1 Lap     6.0  \n",
-      "31 NaT                    NaT            +1 Lap     4.0  \n",
-      "3  NaT                    NaT            +1 Lap     2.0  \n",
-      "5  NaT                    NaT            +1 Lap     1.0  \n",
-      "7  NaT                    NaT            +1 Lap     0.0  \n",
-      "23 NaT                    NaT            +1 Lap     0.0  \n",
-      "4  NaT                    NaT            +1 Lap     0.0  \n",
-      "63 NaT                    NaT            +1 Lap     0.0  \n",
-      "99 NaT                    NaT            +1 Lap     0.0  \n",
-      "20 NaT                    NaT            +1 Lap     0.0  \n",
-      "8  NaT                    NaT            +1 Lap     0.0  \n",
-      "6  NaT                    NaT           +2 Laps     0.0  \n",
-      "26 NaT                    NaT           +2 Laps     0.0  \n",
-      "18 NaT                    NaT  Collision damage     0.0  }\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Portuguese Grand Prix':    DriverNumber BroadcastName Abbreviation           TeamName TeamColor  \\\n",
+       " 44           44    L HAMILTON          HAM           Mercedes    00D2BE   \n",
+       " 77           77      V BOTTAS          BOT           Mercedes    00D2BE   \n",
+       " 33           33  M VERSTAPPEN          VER    Red Bull Racing    1E41FF   \n",
+       " 16           16     C LECLERC          LEC            Ferrari    DC0000   \n",
+       " 10           10       P GASLY          GAS         AlphaTauri    ffffff   \n",
+       " 55           55       C SAINZ          SAI            McLaren    FF8700   \n",
+       " 11           11       S PEREZ          PER       Racing Point    F596C8   \n",
+       " 31           31        E OCON          OCO            Renault    FFF500   \n",
+       " 3             3   D RICCIARDO          RIC            Renault    FFF500   \n",
+       " 5             5      S VETTEL          VET            Ferrari    DC0000   \n",
+       " 7             7   K RAIKKONEN          RAI  Alfa Romeo Racing    9B0000   \n",
+       " 23           23       A ALBON          ALB    Red Bull Racing    1E41FF   \n",
+       " 4             4      L NORRIS          NOR            McLaren    FF8700   \n",
+       " 63           63     G RUSSELL          RUS           Williams    0082fa   \n",
+       " 99           99  A GIOVINAZZI          GIO  Alfa Romeo Racing    9B0000   \n",
+       " 20           20   K MAGNUSSEN          MAG       Haas F1 Team    787878   \n",
+       " 8             8    R GROSJEAN          GRO       Haas F1 Team    787878   \n",
+       " 6             6      N LATIFI          LAT           Williams    0082fa   \n",
+       " 26           26       D KVYAT          KVY         AlphaTauri    ffffff   \n",
+       " 18           18      L STROLL          STR       Racing Point    F596C8   \n",
+       " \n",
+       "     FirstName    LastName            FullName  Position  GridPosition  Q1  Q2  \\\n",
+       " 44      Lewis    Hamilton      Lewis Hamilton       1.0           1.0 NaT NaT   \n",
+       " 77   Valtteri      Bottas     Valtteri Bottas       2.0           2.0 NaT NaT   \n",
+       " 33        Max  Verstappen      Max Verstappen       3.0           3.0 NaT NaT   \n",
+       " 16    Charles     Leclerc     Charles Leclerc       4.0           4.0 NaT NaT   \n",
+       " 10     Pierre       Gasly        Pierre Gasly       5.0           9.0 NaT NaT   \n",
+       " 55     Carlos       Sainz        Carlos Sainz       6.0           7.0 NaT NaT   \n",
+       " 11     Sergio       Perez        Sergio Perez       7.0           5.0 NaT NaT   \n",
+       " 31    Esteban        Ocon        Esteban Ocon       8.0          11.0 NaT NaT   \n",
+       " 3      Daniel   Ricciardo    Daniel Ricciardo       9.0          10.0 NaT NaT   \n",
+       " 5   Sebastian      Vettel    Sebastian Vettel      10.0          15.0 NaT NaT   \n",
+       " 7        Kimi   Räikkönen      Kimi Räikkönen      11.0          16.0 NaT NaT   \n",
+       " 23  Alexander       Albon     Alexander Albon      12.0           6.0 NaT NaT   \n",
+       " 4       Lando      Norris        Lando Norris      13.0           8.0 NaT NaT   \n",
+       " 63     George     Russell      George Russell      14.0          14.0 NaT NaT   \n",
+       " 99    Antonio  Giovinazzi  Antonio Giovinazzi      15.0          17.0 NaT NaT   \n",
+       " 20      Kevin   Magnussen     Kevin Magnussen      16.0          19.0 NaT NaT   \n",
+       " 8      Romain    Grosjean     Romain Grosjean      17.0          18.0 NaT NaT   \n",
+       " 6    Nicholas      Latifi     Nicholas Latifi      18.0          20.0 NaT NaT   \n",
+       " 26     Daniil       Kvyat        Daniil Kvyat      19.0          13.0 NaT NaT   \n",
+       " 18      Lance      Stroll        Lance Stroll      20.0          12.0 NaT NaT   \n",
+       " \n",
+       "     Q3                   Time            Status  Points  \n",
+       " 44 NaT 0 days 01:29:56.828000          Finished    26.0  \n",
+       " 77 NaT 0 days 01:30:22.420000          Finished    18.0  \n",
+       " 33 NaT 0 days 01:30:31.336000          Finished    15.0  \n",
+       " 16 NaT 0 days 01:31:02.140000          Finished    12.0  \n",
+       " 10 NaT                    NaT            +1 Lap    10.0  \n",
+       " 55 NaT                    NaT            +1 Lap     8.0  \n",
+       " 11 NaT                    NaT            +1 Lap     6.0  \n",
+       " 31 NaT                    NaT            +1 Lap     4.0  \n",
+       " 3  NaT                    NaT            +1 Lap     2.0  \n",
+       " 5  NaT                    NaT            +1 Lap     1.0  \n",
+       " 7  NaT                    NaT            +1 Lap     0.0  \n",
+       " 23 NaT                    NaT            +1 Lap     0.0  \n",
+       " 4  NaT                    NaT            +1 Lap     0.0  \n",
+       " 63 NaT                    NaT            +1 Lap     0.0  \n",
+       " 99 NaT                    NaT            +1 Lap     0.0  \n",
+       " 20 NaT                    NaT            +1 Lap     0.0  \n",
+       " 8  NaT                    NaT            +1 Lap     0.0  \n",
+       " 6  NaT                    NaT           +2 Laps     0.0  \n",
+       " 26 NaT                    NaT           +2 Laps     0.0  \n",
+       " 18 NaT                    NaT  Collision damage     0.0  }"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -366,22 +404,43 @@
     "                events.append(event)\n",
     "                self.events[i] = events\n",
     "\n",
+    "    \"\"\"\n",
+    "    KWARGS:\n",
+    "    year: int\n",
+    "    event: str\n",
+    "    session: str\n",
+    "    \"\"\"\n",
     "    def get_race_data(self, **kwargs):\n",
     "        year = kwargs.get('year')\n",
     "        event = kwargs.get('event')\n",
     "        session = kwargs.get('session', 'R')\n",
     "\n",
-    "        if year is None:\n",
+    "        if year is None and event is None:\n",
+    "            # NO YEAR PROVIDED, FALL BACK TO  START AND END VALUES\n",
+    "            # NO EVENT PROVIDED, FALL BACK TO ALL EVENTS\n",
     "            self.race_data = set(range(self.start, self.end))\n",
     "\n",
     "            for i in range(self.start, self.end):\n",
     "                events = {}\n",
     "                for event in self.events[i]:\n",
-    "                    gp = fastf1.get_session(i, event, 'R')\n",
+    "                    gp = fastf1.get_session(i, event, session)\n",
     "                    gp.load()\n",
     "                    result = gp.results\n",
     "                    events[event] = result\n",
     "                    self.race_data[i] = events\n",
+    "        elif event is None:\n",
+    "            events = {}\n",
+    "            try:\n",
+    "                event in self.events[year]\n",
+    "            except KeyError:\n",
+    "                print(f\"Year {year} is outside of the data range {self.start} - {self.end}\")\n",
+    "            else:\n",
+    "                for event in self.events[year]:\n",
+    "                    gp = fastf1.get_session(year, event, session)\n",
+    "                    gp.load()\n",
+    "                    result = gp.results\n",
+    "                    events[event] = result\n",
+    "                    self.race_data[year] = events\n",
     "        else:\n",
     "            gp = fastf1.get_session(year, event, session)\n",
     "            gp.load()\n",
@@ -392,46 +451,16 @@
     "hybrid_data.get_schs()\n",
     "hybrid_data.get_events()\n",
     "hybrid_data.get_race_data(year=2020, event='Portuguese Grand Prix')\n",
-    "# print(hybrid_data.events)\n",
-    "# print(hybrid_data.hybrid_schs)\n",
-    "print(hybrid_data.race_data)"
+    "# hybrid_data.events\n",
+    "# hybrid_data.hybrid_schs\n",
+    "hybrid_data.race_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[jovian] Updating notebook \"zoibderg/hybrid-era-analysis\" on https://jovian.ai/\u001b[0m\n",
-      "[jovian] Uploading additional files...\u001b[0m\n",
-      "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# LETS MAKE ANOTHER JOVIAN COMMIT\n",
     "jovian.commit(project=project_name, filename=project_file, files=[\"explore_ergast.py\",\"explore_ergastpy.py\", \"notebook_source\", \"cache\"])"
