move cell warning

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -99,36 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Usage:   \n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <requirement specifier> [package-index-options] ...\n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] -r <requirements file> [package-index-options] ...\n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <vcs project url> ...\n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <local project path> ...\n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <archive url/path> ...\n",
-      "\n",
-      "no such option: -u\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "Usage:   \n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <requirement specifier> [package-index-options] ...\n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] -r <requirements file> [package-index-options] ...\n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <vcs project url> ...\n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <local project path> ...\n",
-      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <archive url/path> ...\n",
-      "\n",
-      "no such option: -u\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -upgrade pip -quiet\n",
     "%pip install pyergast -upgrade -quiet"
@@ -136,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,76 +146,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install jovian --upgrade -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "if (window.IPython && IPython.notebook.kernel) IPython.notebook.kernel.execute('jovian.utils.jupyter.get_notebook_name_saved = lambda: \"' + IPython.notebook.notebook_name + '\"')",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import jovian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[jovian] Updating notebook \"zoibderg/hybrid-era-analysis\" on https://jovian.ai/\u001b[0m\n",
-      "[jovian] Uploading additional files...\u001b[0m\n",
-      "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "jovian.commit(project=project_name, filename=project_file, files=[\"explore_ergast.py\", \"notebook_source\"])"
    ]
@@ -271,24 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "WARING: FASTF1 WILL DOWNLOAD DATA FROM THE INTERNET\n",
-    "FASTF1 WILL ALSO OUPUT A LOT OF INFORMATION TO THE CONSOLE; ENSURE OUPUT IS COLLAPSED\n",
-    "\n",
-    "It is recommended to run the notebook in Google Colab. \n",
-    "The notebook is also available on GitHub\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "# LOAD HYBRID ERA DATA\n",
-    "# Gather schedule\n",
-    "# Gather telemetry\n",
+    "# DATA PREPARATION\n",
     "class FormulaOneData:\n",
     "    def __init__(self, start, end, cache=True):\n",
     "        self.start = start\n",
@@ -376,215 +289,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "core           INFO \tLoading data for Spanish Grand Prix - Race [v2.3.0]\n",
-      "api            INFO \tUsing cached data for driver_info\n",
-      "api            INFO \tUsing cached data for timing_data\n",
-      "api            INFO \tUsing cached data for timing_app_data\n",
-      "core           INFO \tProcessing timing data...\n",
-      "api            INFO \tUsing cached data for session_status_data\n",
-      "api            INFO \tUsing cached data for track_status_data\n",
-      "api            INFO \tUsing cached data for car_data\n",
-      "api            INFO \tUsing cached data for position_data\n",
-      "api            INFO \tUsing cached data for weather_data\n",
-      "api            INFO \tUsing cached data for race_control_messages\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '33', '77', '18', '11', '55', '5', '23', '10', '4', '3', '26', '31', '7', '20', '99', '63', '6', '8', '16']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "schedule\n",
-      "{2020:     RoundNumber   Country     Location  \\\n",
-      "2             1   Austria    Spielberg   \n",
-      "3             2   Austria    Spielberg   \n",
-      "4             3   Hungary     Budapest   \n",
-      "5             4        UK  Silverstone   \n",
-      "6             5        UK  Silverstone   \n",
-      "7             6     Spain     Montmeló   \n",
-      "8             7   Belgium          Spa   \n",
-      "9             8     Italy        Monza   \n",
-      "10            9     Italy      Mugello   \n",
-      "11           10    Russia        Sochi   \n",
-      "12           11   Germany      Nürburg   \n",
-      "13           12  Portugal     Portimão   \n",
-      "14           13     Italy        Imola   \n",
-      "15           14    Turkey     Istanbul   \n",
-      "16           15   Bahrain       Sakhir   \n",
-      "17           16   Bahrain       Sakhir   \n",
-      "18           17       UAE    Abu Dhabi   \n",
-      "\n",
-      "                                    OfficialEventName  EventDate  \\\n",
-      "2   FORMULA 1 ROLEX GROSSER PREIS VON ÖSTERREICH 2020 2020-07-05   \n",
-      "3   FORMULA 1 PIRELLI GROSSER PREIS DER STEIERMARK... 2020-07-12   \n",
-      "4                FORMULA 1 ARAMCO MAGYAR NAGYDÍJ 2020 2020-07-19   \n",
-      "5           FORMULA 1 PIRELLI BRITISH GRAND PRIX 2020 2020-08-02   \n",
-      "6   EMIRATES FORMULA 1 70TH ANNIVERSARY GRAND PRIX... 2020-08-09   \n",
-      "7         FORMULA 1 ARAMCO GRAN PREMIO DE ESPAÑA 2020 2020-08-16   \n",
-      "8             FORMULA 1 ROLEX BELGIAN GRAND PRIX 2020 2020-08-30   \n",
-      "9        FORMULA 1 GRAN PREMIO HEINEKEN D’ITALIA 2020 2020-09-06   \n",
-      "10  FORMULA 1 PIRELLI GRAN PREMIO DELLA TOSCANA FE... 2020-09-13   \n",
-      "11              FORMULA 1 VTB RUSSIAN GRAND PRIX 2020 2020-09-27   \n",
-      "12      FORMULA 1 ARAMCO GROSSER PREIS DER EIFEL 2020 2020-10-11   \n",
-      "13  FORMULA 1 HEINEKEN GRANDE PRÉMIO DE PORTUGAL 2020 2020-10-25   \n",
-      "14  FORMULA 1 EMIRATES GRAN PREMIO DELL’EMILIA ROM... 2020-11-01   \n",
-      "15              FORMULA 1 DHL TURKISH GRAND PRIX 2020 2020-11-15   \n",
-      "16         FORMULA 1 GULF AIR BAHRAIN GRAND PRIX 2020 2020-11-29   \n",
-      "17             FORMULA 1 ROLEX SAKHIR GRAND PRIX 2020 2020-12-06   \n",
-      "18  FORMULA 1 ETIHAD AIRWAYS ABU DHABI GRAND PRIX ... 2020-12-13   \n",
-      "\n",
-      "                      EventName   EventFormat    Session1 Session1Date  \\\n",
-      "2           Austrian Grand Prix  conventional  Practice 1   2020-07-03   \n",
-      "3            Styrian Grand Prix  conventional  Practice 1   2020-07-10   \n",
-      "4          Hungarian Grand Prix  conventional  Practice 1   2020-07-17   \n",
-      "5            British Grand Prix  conventional  Practice 1   2020-07-31   \n",
-      "6   70th Anniversary Grand Prix  conventional  Practice 1   2020-08-07   \n",
-      "7            Spanish Grand Prix  conventional  Practice 1   2020-08-14   \n",
-      "8            Belgian Grand Prix  conventional  Practice 1   2020-08-28   \n",
-      "9            Italian Grand Prix  conventional  Practice 1   2020-09-04   \n",
-      "10            Tuscan Grand Prix  conventional  Practice 1   2020-09-11   \n",
-      "11           Russian Grand Prix  conventional  Practice 1   2020-09-25   \n",
-      "12             Eifel Grand Prix  conventional  Practice 1   2020-10-09   \n",
-      "13        Portuguese Grand Prix  conventional  Practice 1   2020-10-23   \n",
-      "14    Emilia Romagna Grand Prix  conventional  Practice 1   2020-10-31   \n",
-      "15           Turkish Grand Prix  conventional  Practice 1   2020-11-13   \n",
-      "16           Bahrain Grand Prix  conventional  Practice 1   2020-11-27   \n",
-      "17            Sakhir Grand Prix  conventional  Practice 1   2020-12-04   \n",
-      "18         Abu Dhabi Grand Prix  conventional  Practice 1   2020-12-11   \n",
-      "\n",
-      "      Session2 Session2Date    Session3 Session3Date    Session4 Session4Date  \\\n",
-      "2   Practice 2   2020-07-03  Practice 3   2020-07-04  Qualifying   2020-07-04   \n",
-      "3   Practice 2   2020-07-10  Practice 3   2020-07-11  Qualifying   2020-07-11   \n",
-      "4   Practice 2   2020-07-17  Practice 3   2020-07-18  Qualifying   2020-07-18   \n",
-      "5   Practice 2   2020-07-31  Practice 3   2020-08-01  Qualifying   2020-08-01   \n",
-      "6   Practice 2   2020-08-07  Practice 3   2020-08-08  Qualifying   2020-08-08   \n",
-      "7   Practice 2   2020-08-14  Practice 3   2020-08-15  Qualifying   2020-08-15   \n",
-      "8   Practice 2   2020-08-28  Practice 3   2020-08-29  Qualifying   2020-08-29   \n",
-      "9   Practice 2   2020-09-04  Practice 3   2020-09-05  Qualifying   2020-09-05   \n",
-      "10  Practice 2   2020-09-11  Practice 3   2020-09-12  Qualifying   2020-09-12   \n",
-      "11  Practice 2   2020-09-25  Practice 3   2020-09-26  Qualifying   2020-09-26   \n",
-      "12  Practice 2   2020-10-09  Practice 3   2020-10-10  Qualifying   2020-10-10   \n",
-      "13  Practice 2   2020-10-23  Practice 3   2020-10-24  Qualifying   2020-10-24   \n",
-      "14  Practice 2          NaT  Practice 3          NaT  Qualifying   2020-10-31   \n",
-      "15  Practice 2   2020-11-13  Practice 3   2020-11-14  Qualifying   2020-11-14   \n",
-      "16  Practice 2   2020-11-27  Practice 3   2020-11-28  Qualifying   2020-11-28   \n",
-      "17  Practice 2   2020-12-04  Practice 3   2020-12-05  Qualifying   2020-12-05   \n",
-      "18  Practice 2   2020-12-11  Practice 3   2020-12-12  Qualifying   2020-12-12   \n",
-      "\n",
-      "   Session5 Session5Date  F1ApiSupport  \n",
-      "2      Race   2020-07-05          True  \n",
-      "3      Race   2020-07-12          True  \n",
-      "4      Race   2020-07-19          True  \n",
-      "5      Race   2020-08-02          True  \n",
-      "6      Race   2020-08-09          True  \n",
-      "7      Race   2020-08-16          True  \n",
-      "8      Race   2020-08-30          True  \n",
-      "9      Race   2020-09-06          True  \n",
-      "10     Race   2020-09-13          True  \n",
-      "11     Race   2020-09-27          True  \n",
-      "12     Race   2020-10-11          True  \n",
-      "13     Race   2020-10-25          True  \n",
-      "14     Race   2020-11-01          True  \n",
-      "15     Race   2020-11-15          True  \n",
-      "16     Race   2020-11-29          True  \n",
-      "17     Race   2020-12-06          True  \n",
-      "18     Race   2020-12-13          True  }\n",
-      "-----------------\n",
-      "events\n",
-      "{2020: 'Spanish Grand Prix'}\n",
-      "-----------------\n",
-      "race data\n",
-      "{'Spanish Grand Prix':    DriverNumber BroadcastName Abbreviation           TeamName TeamColor  \\\n",
-      "44           44    L HAMILTON          HAM           Mercedes    00D2BE   \n",
-      "33           33  M VERSTAPPEN          VER    Red Bull Racing    1E41FF   \n",
-      "77           77      V BOTTAS          BOT           Mercedes    00D2BE   \n",
-      "18           18      L STROLL          STR       Racing Point    F596C8   \n",
-      "11           11       S PEREZ          PER       Racing Point    F596C8   \n",
-      "55           55       C SAINZ          SAI            McLaren    FF8700   \n",
-      "5             5      S VETTEL          VET            Ferrari    DC0000   \n",
-      "23           23       A ALBON          ALB    Red Bull Racing    1E41FF   \n",
-      "10           10       P GASLY          GAS         AlphaTauri    ffffff   \n",
-      "4             4      L NORRIS          NOR            McLaren    FF8700   \n",
-      "3             3   D RICCIARDO          RIC            Renault    FFF500   \n",
-      "26           26       D KVYAT          KVY         AlphaTauri    ffffff   \n",
-      "31           31        E OCON          OCO            Renault    FFF500   \n",
-      "7             7   K RAIKKONEN          RAI  Alfa Romeo Racing    9B0000   \n",
-      "20           20   K MAGNUSSEN          MAG       Haas F1 Team    787878   \n",
-      "99           99  A GIOVINAZZI          GIO  Alfa Romeo Racing    9B0000   \n",
-      "63           63     G RUSSELL          RUS           Williams    0082fa   \n",
-      "6             6      N LATIFI          LAT           Williams    0082fa   \n",
-      "8             8    R GROSJEAN          GRO       Haas F1 Team    787878   \n",
-      "16           16     C LECLERC          LEC            Ferrari    DC0000   \n",
-      "\n",
-      "    FirstName    LastName            FullName  Position  GridPosition  Q1  Q2  \\\n",
-      "44      Lewis    Hamilton      Lewis Hamilton       1.0           1.0 NaT NaT   \n",
-      "33        Max  Verstappen      Max Verstappen       2.0           3.0 NaT NaT   \n",
-      "77   Valtteri      Bottas     Valtteri Bottas       3.0           2.0 NaT NaT   \n",
-      "18      Lance      Stroll        Lance Stroll       4.0           5.0 NaT NaT   \n",
-      "11     Sergio       Perez        Sergio Perez       5.0           4.0 NaT NaT   \n",
-      "55     Carlos       Sainz        Carlos Sainz       6.0           7.0 NaT NaT   \n",
-      "5   Sebastian      Vettel    Sebastian Vettel       7.0          11.0 NaT NaT   \n",
-      "23  Alexander       Albon     Alexander Albon       8.0           6.0 NaT NaT   \n",
-      "10     Pierre       Gasly        Pierre Gasly       9.0          10.0 NaT NaT   \n",
-      "4       Lando      Norris        Lando Norris      10.0           8.0 NaT NaT   \n",
-      "3      Daniel   Ricciardo    Daniel Ricciardo      11.0          13.0 NaT NaT   \n",
-      "26     Daniil       Kvyat        Daniil Kvyat      12.0          12.0 NaT NaT   \n",
-      "31    Esteban        Ocon        Esteban Ocon      13.0          15.0 NaT NaT   \n",
-      "7        Kimi   Räikkönen      Kimi Räikkönen      14.0          14.0 NaT NaT   \n",
-      "20      Kevin   Magnussen     Kevin Magnussen      15.0          16.0 NaT NaT   \n",
-      "99    Antonio  Giovinazzi  Antonio Giovinazzi      16.0          20.0 NaT NaT   \n",
-      "63     George     Russell      George Russell      17.0          18.0 NaT NaT   \n",
-      "6    Nicholas      Latifi     Nicholas Latifi      18.0          19.0 NaT NaT   \n",
-      "8      Romain    Grosjean     Romain Grosjean      19.0          17.0 NaT NaT   \n",
-      "16    Charles     Leclerc     Charles Leclerc      20.0           9.0 NaT NaT   \n",
-      "\n",
-      "    Q3                   Time       Status  Points  \n",
-      "44 NaT 0 days 01:31:45.279000     Finished    25.0  \n",
-      "33 NaT 0 days 01:32:09.456000     Finished    18.0  \n",
-      "77 NaT 0 days 01:32:30.031000     Finished    16.0  \n",
-      "18 NaT                    NaT       +1 Lap    12.0  \n",
-      "11 NaT                    NaT       +1 Lap    10.0  \n",
-      "55 NaT                    NaT       +1 Lap     8.0  \n",
-      "5  NaT                    NaT       +1 Lap     6.0  \n",
-      "23 NaT                    NaT       +1 Lap     4.0  \n",
-      "10 NaT                    NaT       +1 Lap     2.0  \n",
-      "4  NaT                    NaT       +1 Lap     1.0  \n",
-      "3  NaT                    NaT       +1 Lap     0.0  \n",
-      "26 NaT                    NaT       +1 Lap     0.0  \n",
-      "31 NaT                    NaT       +1 Lap     0.0  \n",
-      "7  NaT                    NaT       +1 Lap     0.0  \n",
-      "20 NaT                    NaT       +1 Lap     0.0  \n",
-      "99 NaT                    NaT       +1 Lap     0.0  \n",
-      "63 NaT                    NaT       +1 Lap     0.0  \n",
-      "6  NaT                    NaT      +2 Laps     0.0  \n",
-      "8  NaT                    NaT      +2 Laps     0.0  \n",
-      "16 NaT                    NaT  Electronics     0.0  }\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# LOAD DATA FOR ENTIRE HYBRID ERA\n",
     "\n",
-    "hybrid_data = FormulaOneData(2014, 2023)\n",
-    "hybrid_data.get_schs(year=2020)\n",
-    "hybrid_data.get_events(year=2020, event='Spanish Grand Prix')\n",
-    "hybrid_data.get_event_data(year=2020, event='Spanish Grand Prix', session='R')\n",
+    "\"\"\"\n",
+    "WARING: FASTF1 WILL DOWNLOAD DATA FROM THE INTERNET\n",
+    "FASTF1 WILL ALSO OUPUT A LOT OF INFORMATION TO THE CONSOLE; ENSURE OUPUT IS COLLAPSED\n",
     "\n",
-    "print(\"schedule\")\n",
-    "print(hybrid_data.hybrid_schs)\n",
-    "print(\"-----------------\")\n",
-    "print(\"events\")\n",
-    "print(hybrid_data.events)\n",
-    "print(\"-----------------\")\n",
-    "print(\"race data\")\n",
-    "print(hybrid_data.race_data)"
+    "It is recommended to run the notebook in Google Colab. \n",
+    "The notebook is also available on GitHub\n",
+    "\"\"\"\n",
+    "\n",
+    "hybrid_data = FormulaOneData(2014, 2023)\n",
+    "hybrid_data.get_schs()\n",
+    "hybrid_data.get_events()\n",
+    "hybrid_data.get_event_data()\n",
+    "\n",
+    "# print(\"schedule\")\n",
+    "# print(hybrid_data.hybrid_schs)\n",
+    "# print(\"-----------------\")\n",
+    "# print(\"events\")\n",
+    "# print(hybrid_data.events)\n",
+    "# print(\"-----------------\")\n",
+    "# print(\"race data\")\n",
+    "# print(hybrid_data.race_data)"
    ]
   },
   {
